Most visited: Fix mysterious layout bug
According to jbrummer this fixes the issue where the layout only has 2
columns rather than 3 on wide screens.

I've never been able to reproduce it personally, but others have
confirmed this fixes it.

--- a/src/resources/about.css
+++ b/src/resources/about.css
@@ -250,6 +250,7 @@ html.epiphany-html {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         grid-gap: 18px;
         margin: 18px;
+        width: 800px;
     }
 }
 
